--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^10.4.8",
     "next": "12.2.5",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.54.4",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
