--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.22.6",
     "autoprefixer": "^10.4.8",
     "next": "12.2.5",
+    "next-themes": "^0.2.0",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
