--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
-    "antd": "^4.22.6",
     "autoprefixer": "^10.4.8",
     "next": "12.2.5",
     "next-themes": "^0.2.0",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-parallax": "^3.3.1",
     "sass": "^1.54.4",
     "tailwindcss": "^3.1.8"
   },
