--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^10.4.8",
+    "motion": "^12.23.26",
     "next": "12.2.5",
     "next-themes": "^0.2.0",
     "postcss": "^8.4.16",
