--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-scroll-parallax": "^3.3.1",
     "sass": "^1.54.4",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
