fix: deployment sharp package

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "yarn add sharp --platform=linux --arch=x64 --ignore-scripts && yarn build"
   publish = ".next"
 
 [build.environment]
