--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.2.0",
     "react-scroll-parallax": "^3.3.1",
     "sass": "^1.54.4",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "eslint": "8.22.0",
