--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,14 @@
-
 [build]
-  command = "yarn add sharp@0.32.6 --ignore-scripts && yarn build"
+  command = "yarn install && yarn build"
   publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18.17.0"
+  npm_config_sharp_binary_host = "https://github.com/lovell/sharp-libvips/releases/download"
+  npm_config_sharp_libvips_binary_host = "https://github.com/lovell/sharp-libvips/releases/download"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[functions]
+  node_bundler = "esbuild"
